# nonebot-adapter-rocketchat

./: .gitignore  README.md  build.sh  package-lock.json  pyproject.toml
adapters/rocketchat/: adapter.py  bot.py  collator.py  config.py  event.py  message.py  model.py
adapters/rocketchat/realtime/: methods.py
docs/: MANUAL.md
plugins/test/: __init__.py
